[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracing-ip-behind-vpn"
version = "0.1.0"
description = "FastAPI service to classify IPs as VPN/Proxy/Tor/Hosting with provider details and heuristics."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Author", email = "author@example.com" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
